fixed z-index for nav-bar

--- a/src/Components/AboutMe/aboutMe.module.scss
+++ b/src/Components/AboutMe/aboutMe.module.scss
@@ -5,4 +5,16 @@
     position: relative;
     z-index:1;
     padding:40rem 8rem;
+    display:grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-row-gap:2rem;
+
+    h2 {
+        grid-column:1/-1;
+    }
+}
+
+.text {
+    color:#fff;
+    font-size: 1.6rem;
 }
