--- a/src/Components/NavMenu/navMenu.module.scss
+++ b/src/Components/NavMenu/navMenu.module.scss
@@ -122,6 +122,7 @@
   cursor: pointer;
   transition: all 0.4s ease-in-out;
   text-align: center;
+  z-index:4;
 
   &:active {
     transform: scale(0.2) translateY(-3px);
